# stdmicro

./: .gitignore  BezierCurve.cpp  BezierCurve.h  CMakeLists.txt  Canvas.cpp  Canvas.h  DS3231.h  DejaVuSans.cpp  DejaVuSans.h  DejaVuSerif.cpp  DejaVuSerif.h  Display.cpp  Display.h  DisplayInterface.h  EmBox.cpp  EmBox.h  Font.h  FontCommon.h  FontFace.h  FontSize.cpp  FontSize.h  Frequencies.h  GD7965.cpp  GD7965.h  GPIO.h  I2C.h  LICENSE  Led.cpp  Led.h  Path.cpp  Path.h  Pins.h  README.md  RP2040_GPIO.cpp  RP2040_I2C.cpp  RP2040_I2C.h  blink.cpp  canvas.h  common.h  converter.py  (+11 more)
stdmicro/: common.h  types.h
stdmicro/hardware/: Frequencies.h  GPIO.h  I2C.h  SPI.h
stdmicro/hardware/RTC/: RTC.h
stdmicro/hardware/RTC/DS3231/: DS3231.cpp  DS3231.h
stdmicro/hardware/RTC/ds3231/: DS3231.cpp  DS3231.h
stdmicro/hardware/display/: Display.h
stdmicro/hardware/display/eink/GD7965/: GD7965.cpp  GD7965.h
stdmicro/hardware/processor/RP2040/: RP2040.h  RP2040_GPIO.cpp  RP2040_GPIO.h  RP2040_I2C.cpp  RP2040_I2C.h  RP2040_SPI.cpp  RP2040_SPI.h
stdmicro/hardware/processor/rp2040/: RP2040_I2C.cpp  RP2040_I2C.h  RP2040_SPI.cpp  RP2040_SPI.h
